--- a/market/myapp/templates/myapp/base.html
+++ b/market/myapp/templates/myapp/base.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'index' %}">Logo</a>
+    <a class="navbar-brand" href="{% url 'indexs' %}">Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,10 +20,10 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+          <a class="nav-link" href="{% url 'contact' %}">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'item:items' %}">Historique</a>
+          <a class="nav-link" href="{% url 'item:items' %}">products</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'item:new' %}">Nouveau</a>
